--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -63,6 +63,8 @@
       </div>
 	</div>
 
+  <script src="js/bind.js"></script>
+  <script src="js/classList.js"></script>
   <script src="js/animframe_polyfill.js"></script>
   <script src="js/keyboard_input_manager.js"></script>
   <script src="js/html_actuator.js"></script>
